--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">DailyGoal</string>
+    <string name="app_name">ProblemStatement</string>
+    <string name="achieve">Did I achieve this goal today?</string>
 </resources>
